# ripgrep

./: .gitignore  MODULE.bazel  cargo-bazel-lock.json
