module(
    name = "ripgrep",
    version = "0.0.0",
)


# (based on (Apache-2.0) https://github.com/bazelbuild/rules_rust/blob/main/examples/bazel_env/MODULE.bazel)
bazel_dep(name="bazel_skylib", version = "1.3.0")
bazel_dep(name="rules_rust", version = "0.57.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
#rust.toolchain(edition = "2021")
rust.toolchain(edition = "2018")
use_repo(
    rust,
    "rust_toolchains",
)

register_toolchains("@rust_toolchains//:all")



crate = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)
crate.from_cargo(
    name = "crate_index",
    cargo_lockfile = "//:Cargo.lock",
    lockfile = "//:cargo-bazel-lock.json",
    manifests = [
        "//:Cargo.toml",
        "//:crates/globset/Cargo.toml",
        "//:crates/grep/Cargo.toml",
        "//:crates/cli/Cargo.toml",
        "//:crates/matcher/Cargo.toml",
        "//:crates/pcre2/Cargo.toml",
        "//:crates/printer/Cargo.toml",
        "//:crates/regex/Cargo.toml",
        "//:crates/searcher/Cargo.toml",
        "//:crates/ignore/Cargo.toml",
    ],
)
use_repo(crate, "crate_index")

#bazel_dep(name = "bazel_env.bzl", version = "0.1.1")
